fix: add missing example script

--- a/packages/scripts/node/tpl/package.json.ejs
+++ b/packages/scripts/node/tpl/package.json.ejs
@@ -16,6 +16,7 @@
     "build": "node-scripts build",
     "watch": "node-scripts build --watch",
     "test": "node-scripts test",
+    "example": "node-scripts exaple",
     "prepublishOnly":
       "node-scripts clean && node-scripts build && node-scripts test"
   },
